# Vireon

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATASET_VALIDATION.md  DETERMINISM.md  Dockerfile  GOVERNANCE.md  IMPLEMENTATION_STATUS.md  KNOWN_ISSUES.md  LICENSE  LIMITATIONS.md  MANIFEST.in  Makefile  PERFORMANCE_REPORT.md  README.md  REPRODUCIBILITY.md  SECURITY.md  SECURITY_VALIDATION.md  SYSTEM_VERIFICATION.md  VALIDATION_REPORT.md  audit_script.py  deep_validator.py  determinism_report.json  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements-lock.txt  requirements.txt  simulate_board.py  test_run.sh  test_v2_orchestrator.py
.github/: Here's the prompt.md
.github/workflows/: benchmark.yml  ci.yml
crates/neurodsl/: README.md
docker/: Dockerfile
docs/: CI_CD_STRATEGY.md  FINAL_ECOSYSTEM.md  QIF-DERIVATION-LOG.md  aa.md
docs/adr/: ADR-001-kernel-transition.md  ADR-002-control-data-plane-split.md  ADR-003-provider-capability-manifest.md  ADR-004-deterministic-execution.md  ADR-005-bifurcated-clock-scheduler.md  ADR-006-ebpf-capability-enforcement.md  ADR-007-zero-copy-pointer-handoff.md  ADR-008-crdt-state-store.md  ADR-009-ffi-error-mapping.md  ADR-010-hardware-watchdog.md  ADR-011-epoched-crdt-garbage-collection.md  ADR-012-unidirectional-memory-protections.md  ADR-013-compiler-pinned-determinism.md  ADR-015-non-blocking-ring-buffers.md  (+2 more)
evidence/: evidence_package_239559d0f56d.json  evidence_package_379fe46ac66d.json  evidence_package_3f11e7df2721.json  evidence_package_580d20f88486.json  evidence_package_787d20e84c50.json  evidence_package_aca1cdb965fd.json
examples/: cpp_firmware_test.cpp  lsl_receiver.py  mock_firmware  simulate_brainflow_client.py
experiments/: default.toml  noise_attack.toml
imp/: ANTIGRAVITY_BUILD_RULES.md  ANTIGRAVITY_BUILD_RULES_CHEATSHEET.md  ANTIGRAVITY_DELETION_CHECKLIST.md  ANTIGRAVITY_FIRST_WEEK_CHECKLIST.md  ANTIGRAVITY_PHASE_MAP.md  ANTIGRAVITY_REMEDIATION_RULES.md  ANTIGRAVITY_TWO_REPO_BOUNDARY_SPEC.md  ARCHITECTURE_AUDIT.md  DEPENDENCY_ANALYSIS.md  DEVELOPER_EXPERIENCE.md  DOCUMENTATION_AUDIT.md  EXECUTIVE_SUMMARY.md  FINAL_VERDICT.md  PERFORMANCE_AUDIT.md  RECOMMENDATIONS.md  REPOSITORY_BOUNDARIES.md  RISK_REGISTER.md  ROADMAP_REVIEW.md  SCIENTIFIC_VALIDITY (1).md  SECURITY_AUDIT.md  TECHNICAL_DEBT.md
neuroshield/: __init__.py  __main__.py  mcp_server.py
providers/: __init__.py
scripts/: bulk_generate_docs.py  fix_docs.py  generate_evidence.py  run_validation.py  validate_docs.py
tests/: conftest.py  test_adversarial.py  test_adversarial_mitigations.py  test_adversarial_remediation.py  test_architecture.py  test_attack_physical.py  test_attack_scenarios.py  test_authentication.py  test_bci_paradox_solvers.py  test_ble_emulator.py  test_boundaries.py  test_clinical_risk.py  test_concurrency.py  test_core_infrastructure.py  test_crdt_store.py  test_crypto.py  test_cyber_physical_realism.py  test_data_plane.py  test_dataset_manager.py  test_dbs_emulator.py  test_detection.py  test_detection_clinical.py  test_determinism.py  test_dynamic_ids.py  test_e2ee.py  test_engine.py  test_fuzzer.py  test_hil_emulator.py  test_integration.py  test_integrity_merkle.py  test_mcp_server.py  test_native_abi.py  test_neurodsl_ffi.py  test_neuroshield.py  test_openbci_emulator.py  test_pieeg_emulator.py  test_plugin_registry.py  test_plugins.py  test_qif_attacks.py  test_qif_clinical.py  (+10 more)
vireon/: __init__.py  __main__.py  mcp_server.py
(+306 files in other folders)
