[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vireon"
version = "1.0.0"
description = "Vendor-neutral neurotechnology validation framework."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "VIREON Contributors"}
]
keywords = ["neurosecurity", "BCI", "EEG", "DBS", "simulation", "digital-twin", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.8.0",
    "cryptography>=48.0.1",
    "click>=8.3.3",
    "websockets~=11.0",
    "pyyaml~=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=4.1.0",
    "mypy>=1.10.0",
]
docs = [
    "mkdocs-material~=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
vireon = "vireon.__main__:main"

[project.entry-points."vireon.plugins"]
# Plugin system entry point

[project.urls]
Repository = "https://github.com/SaadiMalik1/Vireon.git"
Documentation = "https://vireon.readthedocs.io"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".venv", "venv", "__pycache__"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = false
