[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vireon"
version = "1.1.0"
description = "Vendor-neutral neurotechnology runtime and security validation framework."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "VIREON Contributors"}
]
keywords = ["neurosecurity", "BCI", "EEG", "DBS", "simulation", "digital-twin", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.8.0",
    "click>=8.3.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
    "cryptography>=48.0.1",
]

[project.optional-dependencies]
crypto = ["cryptography>=48.0.1"]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=4.1.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "maturin>=1.5.0",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
vireon = "vireon.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vireon*"]
exclude = ["tests*", "threat_models*", "docs*", "crates*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".venv", "venv", "__pycache__", "target"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
